# WordLe

./: CMakeLists.txt  Game.cpp  README.md  header.h  main.cpp
StupidButFastWordle/: Calc.cpp  Dict.txt  Init.cpp  Interactor.cpp  Player.cpp  Util.cpp  Word.cpp  main.cpp  output.txt
